Add XPath filter logic

--- a/XmlParser.Core/XmlParser.Core.csproj
+++ b/XmlParser.Core/XmlParser.Core.csproj
@@ -6,4 +6,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Resources\Cars.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
